# wrtools

./: CMakeLists.txt  LICENSE
include/: wr_hash.hpp  wr_string.h
source/string/: wr_string.cpp
test/: consistent_hash_test.cpp  split_test.cpp
